# cyrus

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
config/languages/: golang.yaml  java.yaml  javascript.yaml  php.yaml  python.yaml  ruby.yaml  rust.yaml
docs/ar/: README.md
docs/en/: README.md
docs/es/: README.md
docs/fa/: README.md
docs/zh/: README.md
examples/cyrus_config/: cyrus.toml
examples/golang/: cyrus.toml  main.go
examples/javascript/: app.js  cyrus.toml
examples/python/: app.py  cyrus.toml
scripts/: build.sh  install.sh
src/: error.rs  main.rs
src/commands/: config.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs  run.rs  update.rs  version.rs
src/config/: mod.rs  profiles.rs
src/core/: environment.rs  mod.rs  project.rs
src/installer/: mod.rs
src/languages/: golang.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs
src/plugins/: interface.rs  loader.rs  mod.rs  registry.rs
src/runtime/: mod.rs
src/templates/: builtin.rs  git.rs  mod.rs  registry.rs
src/utils/: archive.rs  downloader.rs  mod.rs  platform.rs
src/workspace/: mod.rs
tests/integration/: cli_tests.rs
tests/unit/: core_tests.rs
