[package]
name = "cyrus"
version = "0.3.0"
edition = "2021"
authors = ["Omid Nateghi <omid@example.com>"]
description = "All-in-One language management tool for developers with advanced features"
license = "MIT"
repository = "https://github.com/omidnateghi/cyrus"
homepage = "https://cyrus-lang.org"
keywords = ["language-manager", "development", "cli", "rust", "templates"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cyrus"
path = "src/main.rs"

[dependencies]
# Core dependencies
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"

# Network and downloads
reqwest = { version = "0.11", features = ["json", "stream"] }
tar = "0.4"
flate2 = "1.0"
zip = "0.6"

# UI and progress
indicatif = "0.17"
colored = "2.0"
dialoguer = "0.11"
console = "0.15"

# File operations
walkdir = "2.3"
sha2 = "0.10"
semver = "1.0"
tempfile = "3.8"
fs_extra = "1.3"

# Logging and debugging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
regex = "1.10"
async-trait = "0.1"
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Configuration and validation
validator = { version = "0.16", features = ["derive"] }
config = "0.13"

# Template engine
handlebars = { version = "4.5", optional = true }
tera = { version = "1.19", optional = true }

# Git operations
git2 = { version = "0.18", optional = true }

# Process management
subprocess = "0.2"

# Plugin system
libloading = { version = "0.8", optional = true }
dlopen = { version = "0.1", optional = true }

# Security
ring = { version = "0.17", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
tokio-test = "0.4"
mockito = "1.2"
pretty_assertions = "1.4"

[features]
default = ["templates", "plugins", "git-integration"]
templates = ["handlebars", "tera"]
plugins = ["libloading", "dlopen"]
git-integration = ["git2"]
security-audit = ["ring"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
opt-level = 1
debug = true
